# book-ai-ocr-tool

./: README.md  main.py  pyproject.toml
book_ai_ocr_tool/: book_ai_ocr_tool.py  book_concat.py  book_merge.py  book_ocr.py  book_tts.py  hello_tts.py  models.py
